--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,23 @@
-absl-py==2.1.0
-aicsimageio==4.14.0
-aiobotocore==2.5.4
-aiohappyeyeballs==2.4.0
-aiohttp==3.10.6
-aioitertools==0.12.0
-aiosignal==1.3.1
+absl-py~=2.1.0
+aicsimageio~=4.14.0
+aiobotocore~=2.5.4
+aiohappyeyeballs~=2.4.0
+aiohttp~=3.10.6
+aioitertools~=0.12.0
+aiosignal~=1.3.1
 annotated-types
 appdirs
 appnope
-asciitree==0.3.3
+asciitree~=0.3.3
 asttokens
-astunparse==1.6.3
-attrs==24.2.0
-av==13.0.0
+astunparse~=1.6.3
+attrs~=24.2.0
+av~=13.0.0
 bokeh
-botocore==1.31.17
+botocore~=1.31.17
 Brotli
-cachier==3.0.1
-cellpose==3.0.11
+cachier~=3.0.1
+cellpose~=3.0.11
 certifi
 cffi
 charset-normalizer
@@ -34,70 +34,70 @@ debugpy
 decorator
 distributed
 docformatter
-elementpath==4.5.0
+elementpath~=4.5.0
 exceptiongroup
 executing
-fasteners==0.19
-fastremap==1.15.0
-filelock==3.16.1
-flatbuffers==24.3.25
+fasteners~=0.19
+fastremap~=1.15.0
+filelock~=3.16.1
+flatbuffers~=24.3.25
 flexcache
 flexparser
 fonttools
-frozenlist==1.4.1
-fsspec==2023.6.0
-gast==0.6.0
-google-pasta==0.2.0
-grpcio==1.66.1
+frozenlist~=1.4.1
+fsspec~=2023.6.0
+gast~=0.6.0
+google-pasta~=0.2.0
+grpcio~=1.66.1
 h2
-h5py==3.11.0
-hpack==4.0.0
+h5py~=3.11.0
+hpack~=4.0.0
 hyperframe
 idna
 imagecodecs
 imageio
-imageio-ffmpeg==0.5.1
+imageio-ffmpeg~=0.5.1
 importlib_metadata
 ipykernel
 ipython
 jedi
 Jinja2
-jmespath==1.0.1
+jmespath~=1.0.1
 jupyter_client
 jupyter_core
-keras==3.5.0
+keras~=3.5.0
 kiwisolver
-lazy_loader==0.4
-libclang==18.1.1
-llvmlite==0.43.0
+lazy_loader~=0.4
+libclang~=18.1.1
+llvmlite~=0.43.0
 locket
-lxml==4.9.4
+lxml~=4.9.4
 lz4
-Markdown==3.7
-markdown-it-py==3.0.0
+Markdown~=3.7
+markdown-it-py~=3.0.0
 MarkupSafe
-matplotlib==3.9.2
+matplotlib~=3.9.2
 matplotlib-inline
-mdurl==0.1.2
-ml-dtypes==0.4.1
-mpmath==1.3.0
+mdurl~=0.1.2
+ml-dtypes~=0.4.1
+mpmath~=1.3.0
 msgpack
-multidict==6.1.0
-munkres==1.1.4
-namex==0.0.8
-natsort==8.4.0
+multidict~=6.1.0
+munkres~=1.1.4
+namex~=0.0.8
+natsort~=8.4.0
 nd2
 nest_asyncio
-networkx==3.3
-numba==0.60.0
-numcodecs==0.13.0
-numpy==1.26.4
+networkx~=3.3
+numba~=0.60.0
+numcodecs~=0.13.0
+numpy~=1.26.4
 ome-types
-ome-zarr==0.9.0
-opencv-python==4.10.0
-opencv-python-headless==4.10.0
-opt-einsum==3.3.0
-optree==0.12.1
+ome-zarr~=0.9.0
+opencv-python~=4.10.0
+opencv-python-headless~=4.10.0
+opt-einsum~=3.3.0
+optree~=0.12.1
 packaging
 pandas
 parso
@@ -107,43 +107,43 @@ pickleshare
 pillow
 PIMS
 pip
-platformdirs==3.10.0
-pluggy==1.0.0
+platformdirs~=3.10.0
+pluggy~=1.0.0
 progress
-protobuf==3.20.0
-psutil==5.9.5
-py==1.11.0
-pyarrow==10.0.1
-pycparser==2.21
-pyparsing==3.0.9
-pytest==7.2.1
-python-utils==3.4.5
+protobuf~=3.20.0
+psutil~=5.9.5
+py~=1.11.0
+pyarrow~=10.0.1
+pycparser~=2.21
+pyparsing~=3.0.9
+pytest~=7.2.1
+python-utils~=3.4.5
 python-multipart
-pytz==2023.3
-PyYAML==6.0
+pytz~=2023.3
+PyYAML~=6.0
 pyzmq
-qimage2ndarray==1.10.0
+qimage2ndarray~=1.10.0
 requests
-scikit-image==0.19.3
+scikit-image~=0.19.3
 scikit-learn
-scipy==1.11.3
+scipy~=1.11.3
 seaborn
-setuptools==65.5.1
+setuptools~=65.5.1
 siphon
-siphash==1.0.5
+siphash~=1.0.5
 six
 snuggs
-spacy==3.4.1
+spacy~=3.4.1
 SQLAlchemy
 statsmodels
-tifffile==2023.9.8
-toolz==0.12.0
+tifffile~=2023.9.8
+toolz~=0.12.0
 torch
-tornado==6.3.2
-typing-extensions==4.5.0
+tornado~=6.3.2
+typing-extensions~=4.5.0
 urllib3
 uvicorn
-watchdog==3.0.0
-websockets==10.4
-xgboost==1.7.5
+watchdog~=3.0.0
+websockets~=10.4
+xgboost~=1.7.5
 zarr
