--- a/src/partaker_config.json
+++ b/src/partaker_config.json
@@ -1,6 +1,6 @@
 {
   "analysis_mode": "biofilm_cloud",
   "default_mode": "single_cell",
-  "remember_choice": false,
+  "remember_choice": true,
   "version": "1.0"
 }
