fix: update analysis mode to single_cell and reset remember_choice flag

--- a/src/partaker_config.json
+++ b/src/partaker_config.json
@@ -1,6 +1,6 @@
 {
-  "analysis_mode": "biofilm_cloud",
+  "analysis_mode": "single_cell",
   "default_mode": "single_cell",
-  "remember_choice": true,
+  "remember_choice": false,
   "version": "1.0"
 }
