feat: implement colony ROI selector dialog for manual colony selection

--- a/src/partaker_config.json
+++ b/src/partaker_config.json
@@ -1,5 +1,5 @@
 {
-  "analysis_mode": "single_cell",
+  "analysis_mode": "biofilm_cloud",
   "default_mode": "single_cell",
   "remember_choice": false,
   "version": "1.0"
